--- a/vn/card-technology.html
+++ b/vn/card-technology.html
@@ -42,32 +42,35 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#page-top">Home</a>
+            <a class="nav-link js-scroll-trigger" href="#page-top">TRANG CHỦ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#company">Company</a>
+            <a class="nav-link js-scroll-trigger" href="#company">HỒ SƠ CÔNG TY</a>
           </li>
-           <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger" href="index.html#product">Application<span class="dropdown-toggle" data-toggle="dropdown"></a>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#product">SẢN PHẨM</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link js-scroll-trigger" href="index.html#application">ỨNG DỤNG<span class="dropdown-toggle" data-toggle="dropdown"></a>
             <div class="dropdown-menu">
-              <a class="nav-link dropdown-item" href="hotstamp.html">Hot Stamping</a>
-			  <a class="nav-link dropdown-item" href="cftransfer.html">Cold Foil Transfer</a>
-              <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
-              <a class="nav-link dropdown-item" href="textile.html">Textile</a>
-			  <a class="nav-link dropdown-item" href="cosmetic.html">Cosmetics</a>
-              <a class="nav-link dropdown-item" href="ttr-coding.html">TTR & Coding</a>
-              <a class="nav-link dropdown-item" href="card-technology.html">Card Technology</a>
-              <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
+              <a class="nav-link dropdown-item" href="hotstamp.html">CÔNG NGHỆ DẬP NÓNG</a>
+			  <a class="nav-link dropdown-item" href="cftransfer.html">CÔNG NGHỆ PHÔI LẠNH</a>
+              <a class="nav-link dropdown-item" href="plastic.html">NGÀNH NHỰA</a>
+              <a class="nav-link dropdown-item" href="textile.html">NGÀNH VẢI</a>
+			  <a class="nav-link dropdown-item" href="cosmetic.html">MỸ PHẨM</a>
+              <a class="nav-link dropdown-item" href="ttr-coding.html">RUY BĂNG IN MÃ VẠCH & IN HẠN SỬ DỤNG (TTR & CODING)</a>
+              <a class="nav-link dropdown-item" href="card-technology.html">CÔNG NGHỆ THẺ</a>
+              <a class="nav-link dropdown-item" href="brand-enhancement.html">NÂNG CẤP THƯƠNG HIỆU</a>
               <a class="nav-link dropdown-item" href="digital-metal.html">Digital Metal&reg;</a>
-              <a class="nav-link dropdown-item" href="high-security.html">High Security</a>
-              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Stamping Tools</a>
+              <a class="nav-link dropdown-item" href="high-security.html">BẢO MẬT AN NINH CAO</a>
+              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Công Cụ Dập</a>
             </div>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#solutions">Solutions</a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#contact">LIÊN HỆ</a>
           </li>
         </ul>
       </div>
@@ -86,8 +89,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase heading-underline">Card Technology</h2>
-          <h3 class="section-subheading text-muted">All system components from one single source</h3>
+          <h2 class="section-heading text-uppercase heading-underline">CÔNG NGHỆ THẺ</h2>
+          <h3 class="section-subheading text-muted">Tất cả các thành phần vật tư đến máy móc từ một nguồn duy nhất</h3>
 		  <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
 		  Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
 		  Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
@@ -100,8 +103,8 @@
       
 		<div class="row">
          <div class="col-md-4">
-          <p class="text-muted">Kurz is one of the leading suppliers of security technologies and components for cards. Our expertise revolves around credit, bank, payment, customer, loyalty, prepaid cards, and also ID documents such as identification cards or driving licenses.</p>
-		  <p class="text-muted">Our global presence provides not only international local customer service, but also supply chain security. We uphold identical quality standards worldwide.</p>
+          <p class="text-muted">Kurz là một trong những nhà cung cấp hàng đầu về công nghệ và vật liệu bảo an cho ngành thẻ. Chuyên cung cấp vật tư và máy móc ứng dụng cho thẻ tín dụng, thẻ ngân hàng, thẻ thanh toán, thẻ khách hàng, khách hàng thân thiết, thẻ trả trước và cả các giấy tờ tùy thân như thẻ căn cước hoặc giấy phép lái xe.</p>
+		  <p class="text-muted">Sự bao phủ toàn toàn cầu của chúng tôi không chỉ cung cấp dịch vụ cho các khách hàng trong nước lẫn quốc tế mà còn cung cấp các chuỗi cung ứng bảo mật. Chúng tôi duy trì các tiêu chuẩn về chất lượng giống hệt nhau trên toàn thế giới.</p>
          </div>
 	     <div class="col-md-4 portfolio-item no-padding">        
           <img class="img-fluid" src="../img/Card/c01.jpg" alt="">
@@ -124,14 +127,14 @@
             </div>
         <div class="col-md-4">
           <div class="portfolio-caption">
-            <h4>Magnetic Foils</h4>
+            <h4>Dải Từ</h4>
             <ul>
-			<li>Reliable storage and retrieval of data</li>
-			<li>Magnetic values in accordance with ISO 7811 or customer's specification</li>
-			<li>Simple and fast processability</li>
-			<li>Available in all standard coercivity levels</li>
-			<li>Suitable for all application processes and a varietyof substrates</li>
-			<li>Visual enhancement of the card through specialcolors and designs</li>
+			<li>Lưu trữ và truy xuất dữ liệu đáng tin cậy</li>
+			<li>Từ tính theo ISO 7811 hoặc thông số kỹ thuật của khách hàng</li>
+			<li>Khả năng xử lý đơn giản và nhanh chóng</li>
+			<li>Có sẵn dải từ với độ từ tính theo các tiêu chuẩn </li>
+			<li>Thích hợp cho tất cả các quy trình ứng dụng và vật liệu thẻ đa dạng</li>
+			<li>Tăng cường hình ảnh của thẻ thông qua các màu sắc đặc biệt và thiết kế</li>
 			</ul>
           </div>
         </div>
@@ -140,13 +143,13 @@
 	<br/> 
 	<div class="row">
         <div class="col-md-4 portfolio-item">
-			<h4>Signature Foils</h4>
+			<h4>Dải Chữ Ký</h4>
             <ul>
-			<li>Easy writing property</li>
-			<li>Secure against counterfeiting and manipulation</li>
-			<li>Good application properties</li>
-			<li>Three layout types: neutral continuous, customer-specific continuous or single image</li>
-			<li>Customized designs for the credit cards such as American Express, China Unionpay, DINERS, JCB, MasterCard, VISA</li>
+			<li>Tính chất dễ viết</li>
+			<li>Đảm bảo chống lại hàng giả và bóc tách</li>
+			<li>Đặc tính bám tốt</li>
+			<li>Ba loại lớp: hình ảnh liên tục trung tính, thiết kế liên tục hoặc đơn hình dành riêng cho khách hàng</li>
+			<li>Thiết kế theo yêu cầu cho các thẻ tín dụng như American Express, China Unionpay, DINERS, JCB, MasterCard, VISA</li>
 		</ul>
         </div>
 	    <div class="col-md-4 portfolio-item no-padding">        
@@ -168,9 +171,9 @@
             </div>
         <div class="col-md-4">
           <div class="portfolio-caption">
-            <h4>Holographic OVDs</h4>
-            <p>Easy to communicate, easy to verify, hard to copy.</p>
-			<p class="text-muted">As a leading supplier of security technology our OVD products offer optical security features and a variety of modular systems including interchangeable features.</p>
+            <h4>Phôi bảo an OVDs Hologram</h4>
+            <p>Dễ truyền đạt, dễ nhận biết, khó sao chép.</p>
+			<p class="text-muted">Là nhà cung cấp hàng đầu về công nghệ bảo mật, các sản phẩm phôi bảo an của chúng tôi cung cấp các tính năng bảo mật quang học và một loạt các hệ thống mô-đun bao gồm các tính năng có thể thay thế cho nhau.</p>
           </div>
         </div>
     </div>
@@ -179,10 +182,10 @@
 	<br/> 
 	<div class="row">
         <div class="col-md-4 portfolio-item">
-			<h4>Tipping Foils</h4>
+			<h4>Phôi Dập Nổi</h4>
             <ul>
-			<li>Decoration of the raised lettering on credit cards</li>
-			<li>Available in two types: metallized and pigmented</li>
+			<li>Trang trí chữ nổi trên thẻ tín dụng</li>
+			<li>Có hai loại khả dụng: ánh kim và màu đặc</li>
 			</ul>
         </div>
 	    <div class="col-md-4 portfolio-item no-padding">        
@@ -203,10 +206,10 @@
             </div>
         <div class="col-md-4">
           <div class="portfolio-caption">
-            <h4>Cold Indent Foils</h4>
+            <h4>Phôi Khắc Chìm</h4>
             <ul>
-			<li>Application of a personalized number onto signaturepanels or the card surface</li>
-			<li>Serves as a reliable, counterfeit-proof security component</li>
+			<li>Ép được số cá nhân hóa vào dải chữ ký hoặc bề mặt thẻ</li>
+			<li>Dùng như một thành phần bảo mật đáng tin cậy, chống giả</li>
 			</ul>
 		  </div>
         </div>
@@ -215,14 +218,14 @@
 	<br/> 
 	<div class="row">
         <div class="col-md-4 portfolio-item">
-			<h4>Scratch-Off Foils</h4>
+			<h4>Phôi Phủ Cào</h4>
             <ul>
-			<li>Protection of security-relevant data such as passwords, PIN codes etc.</li>
-			<li>Easy to scratch-off</li>
-			<li>High coverage</li>
-			<li>Clean stamping</li>
-			<li>High application speed</li>
-			<li>Standard pattern or customized designs</li>
+			<li>Bảo vệ dữ liệu liên quan đến bảo mật như mật khẩu, mã PIN, v.v.</li>
+			<li>Dễ cào</li>
+			<li>Độ che phủ cao</li>
+			<li>Không lem</li>
+			<li>Tốc độ ép cao</li>
+			<li>Theo mẫu chuẩn hoặc thiết kế theo yêu cầu</li>
 			</ul>
         </div>
 	    <div class="col-md-4 portfolio-item no-padding">        
@@ -258,9 +261,9 @@
 		</div>
 		<div class="col-md">
           <div class="portfolio-caption">
-            <h4>Application Machines</h4>
-            <p class="text-muted">Sophisticated security technology requires a seamless integration of advanced foil technology, matched machine systems and modern application processes.</p>
-			<p class="text-muted">KURZ develops and builds application machines that meet a diverse range of card requirements. Our specialities are machines for the application of magnetic foils, signature panels and holographic images.</p>
+            <h4>Máy móc Ứng Dụng</h4>
+            <p class="text-muted">Công nghệ bảo mật tinh vi, phức tạp đòi hỏi sự tích hợp liền mạch của công nghệ phôi tiên tiến, hệ thống máy phù hợp và quy trình ứng dụng hiện đại.</p>
+			<p class="text-muted">KURZ phát triển và xây dựng các máy móc ứng dụng đáp ứng yêu cầu đa dạng về thẻ. Chuyên môn của chúng tôi là máy ép dải từ, dải chữ ký và hình ảnh hologram ba chiều.</p>
           </div>
         </div>
 		</div>
