--- a/vn/cftransfer.html
+++ b/vn/cftransfer.html
@@ -42,32 +42,35 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#page-top">Home</a>
+            <a class="nav-link js-scroll-trigger" href="#page-top">TRANG CHỦ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#company">Company</a>
+            <a class="nav-link js-scroll-trigger" href="#company">HỒ SƠ CÔNG TY</a>
+          </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#product">SẢN PHẨM</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger" href="index.html#product">Application<span class="dropdown-toggle" data-toggle="dropdown"></a>
+            <a class="nav-link js-scroll-trigger" href="index.html#application">ỨNG DỤNG<span class="dropdown-toggle" data-toggle="dropdown"></a>
             <div class="dropdown-menu">
-              <a class="nav-link dropdown-item" href="hotstamp.html">Hot Stamping</a>
-			  <a class="nav-link dropdown-item" href="cftransfer.html">Cold Foil Transfer</a>
-              <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
-              <a class="nav-link dropdown-item" href="textile.html">Textile</a>
-              <a class="nav-link dropdown-item" href="cosmetic.html">Cosmetics</a>
-              <a class="nav-link dropdown-item" href="ttr-coding.html">TTR & Coding</a>
-              <a class="nav-link dropdown-item" href="card-technology.html">Card Technology</a>
-              <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
+              <a class="nav-link dropdown-item" href="hotstamp.html">CÔNG NGHỆ DẬP NÓNG</a>
+			  <a class="nav-link dropdown-item" href="cftransfer.html">CÔNG NGHỆ PHÔI LẠNH</a>
+              <a class="nav-link dropdown-item" href="plastic.html">NGÀNH NHỰA</a>
+              <a class="nav-link dropdown-item" href="textile.html">NGÀNH VẢI</a>
+			  <a class="nav-link dropdown-item" href="cosmetic.html">MỸ PHẨM</a>
+              <a class="nav-link dropdown-item" href="ttr-coding.html">RUY BĂNG IN MÃ VẠCH & IN HẠN SỬ DỤNG (TTR & CODING)</a>
+              <a class="nav-link dropdown-item" href="card-technology.html">CÔNG NGHỆ THẺ</a>
+              <a class="nav-link dropdown-item" href="brand-enhancement.html">NÂNG CẤP THƯƠNG HIỆU</a>
               <a class="nav-link dropdown-item" href="digital-metal.html">Digital Metal&reg;</a>
-              <a class="nav-link dropdown-item" href="high-security.html">High Security</a>
-              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Stamping Tools</a>
+              <a class="nav-link dropdown-item" href="high-security.html">BẢO MẬT AN NINH CAO</a>
+              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Công Cụ Dập</a>
             </div>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#solutions">Solutions</a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#contact">LIÊN HỆ</a>
           </li>
         </ul>
       </div>
@@ -86,8 +89,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase heading-underline">Cold Foil Transfer</h2>
-          <h3 class="section-subheading">Cold foil technology can be flexibly integrated into any printing process. The cold foil is simply applied as a "fifth color” to the print image. This opens up many new design possibilities.</h3>
+          <h2 class="section-heading text-uppercase heading-underline">CÔNG NGHỆ NHŨ LẠNH</h2>
+          <h3 class="section-subheading">CCông nghệ nhũ lạnh có thể được tích hợp linh hoạt vào bất kỳ quy trình in nào. Nhũ lạnh đơn giản được áp dụng như một "màu thứ năm" lên hình ảnh in. Điều này mở ra nhiều khả năng thiết kế mới.</h3>
         </div>
       </div>
 	  
@@ -98,9 +101,9 @@
 
       <div class="row">
         <div class="col-md-5 portfolio-item">
-          <h4 class="text-uppercase">Cold Foil Transfer</h4>
-          <p class="text-muted">The process of cold foil transfer involves applying UV-curable adhesive onto the image area without the need of using dies. After the foil has been in contact with the specific area, the adhesive is cured by UV light and then the carrier film is removed.</p>
-		  <p class="text-muted">Cold foil can be flexibly integrated into any printing process as the cold foil is simply applied as a “fifth colour” to the print image. Overprinting offers free choice of colours. The base colour is usually silver. The cold foil can then be overprinted with any process colours or other colours. A variety of new metallic colour tones can also be created in this manner.</p>
+          <h4 class="text-uppercase">QUY TRÌNH ÉP NHŨ LẠNH</h4>
+          <p class="text-muted">Quá trình chuyển nhũ lạnh bao gồm việc phủ keo UV lên vùng hình ảnh mà không cần sử dụng khuôn. Sau khi giấy bạc tiếp xúc với khu vực cụ thể, keo được xử lý bằng tia UV và sau đó màng ngoài được loại bỏ.</p>
+		  <p class="text-muted">Nhũ lạnh có thể được tích hợp linh hoạt vào bất kỳ quy trình in nào vì nhũ này chỉ được áp dụng đơn giản như một "màu thứ năm" cho hình ảnh in.  Việc in đè giúp sự tự do trong lựa chọn màu sắc. Màu cơ bản thường là bạc. Nhũ lạnh sau đó có thể được in đè lên với bất kỳ màu được xử lý nào hoặc các màu khác. Một loạt các tông màu ánh kim mới cũng có thể được tạo ra theo cách này.</p>
 		</div>
 		<div class="col-md-1 portfolio-item">        
               
@@ -127,15 +130,15 @@
 		<div class="col-md-5 portfolio-item">
 		<br>
 		<br>
-		<h4>Expand your design scope with Cold Foiling</h4>		
+		<h4>Mở rộng phạm vi thiết kế của bạn với Nhũ Lạnh</h4>		
 		<ul>
-		<li>Flexibility when creating designs</li>
-		<li>High register accuracy</li>
-		<li>Very fine elements, negative lettering, rasters and large areas</li>
-		<li>Metallic half-tone effects</li>
-		<li>Optimal foil-to-print register</li>
-		<li>The substrate structure is retained, e.g. a linen effect texture</li></ul>
-        <h6> For more information: <a href="http://www.coldfoils.com/">http://www.coldfoils.com/</a></h6>
+		<li>Linh hoạt khi tạo thiết kế</li>
+		<li>Độ canh chỉnh chính xác cao</li>
+		<li>Ép các chi tiết mảnh, chữ chìm, hình ảnh KTS (raster) và mảng rộng </li>
+		<li>Hiệu ứng nửa tông ánh kim</li>
+		<li>Tối ưu canh chỉnh nhũ ép</li>
+		<li>Cấu trúc bề mặt vẫn được giữ lại, ví dụ: cấu trúc hiệu ứng sớ giấy</li></ul>
+        <h6> Tham khảo thêm thông tin:  <a href="http://www.coldfoils.com/">http://www.coldfoils.com/</a></h6>
 		</div>
 		</div>
 		
@@ -185,13 +188,11 @@
 		<div class="col-md-4">
 		  <div class="portfolio-caption">
 		  <br>
-            <h4 class="text-uppercase">Application Machines</h4>
-            <p>DISTORUN® – Independent module for labeling machines.</p>
-			<p class="text-muted">DISTORUN® is a unique module for the processing of single images and endless decors in cold foiling transfer.
-			Cold foil single images can be accurately positioned. The section between two images can now be used for efficient foil usage.</p>
+            <h4 class="text-uppercase">MÁY MÓC ỨNG DỤNG</h4>
+            <p>DISTORUN® - thiết bị độc lập cho máy in nhãn.</p>
+			<p class="text-muted">DISTORUN® là một thiết bị duy nhất để xử lý các trang trí liên tục và đơn hình trong quá trình ép nhũ lạnh. Nhũ lạnh đơn hình có thể được định vị chính xác. Phần nhũ giữa hai hình giờ đây có thể được tiết kiệm rất nhiều và sử dụng hiệu quả hơn.</p>
 			<br>
-			<p class="text-muted">A print mark reader notes the positions of the print marks. Recording the track speed and the print mark positions is part of the module and is fitted onto the printing press.
-			DISTORUN® operates separately and is not affected by the controls of the printing press. </p>
+			<p class="text-muted">Một đầu đọc dấu in ghi chú các vị trí của dấu in. Ghi lại tốc độ chạy và các vị trí dấu in là một phần của thiết bị và đã được cài đặt trên máy in. DISTORUN® hoạt động riêng biệt và không bị ảnh hưởng bởi các điều khiển của máy in.</p>
           </div>
 		  </div>
 		  <div class="col-md-1">
@@ -208,9 +209,9 @@
 			<img class="img-fluid" src="../img/cft/Distorun_097.jpg" alt="">
         </div>  
 		<div class="col-md-4 portfolio-item">  
-			<h4 class="text-uppercase">The Coldfoil Module</h4>
-            <p class="text-muted">DISTORUN® has been developed and designed with modern servo control technology. A specially-designed software program allows for individual frame positioning and efficient use of foil. </p>
-			<p class="text-muted">DISTORUN® is placed on the rail system of the printing machine and the track speed of the printed substrate is recorded by a separate rotary encoder.</p>
+			<h4 class="text-uppercase">THIẾT BỊ CHO ÉP LẠNH</h4>
+            <p class="text-muted">DISTORUN® đã được phát triển và thiết kế với công nghệ điều khiển động cơ servo hiện đại. Một chương trình phần mềm được thiết kế đặc biệt cho phép định vị khung riêng lẻ và sử dụng nhũ một cách hiệu quả.</p>
+			<p class="text-muted">DISTORUN® được đặt trên hệ thống đường chạy của máy in và tốc độ chạy của vật liệu in được ghi bằng một bộ mã hóa quay riêng biệt.</p>
 		</div>
 		</div>
 		
@@ -218,15 +219,15 @@
 		<br>
 		<div class="row">
 		<div class="col-md-4 portfolio-item">  
-			<h4>General Features</h4>
+			<h4>Đặc Điểm Chung</h4>
             <ul>
-			<li>Processing of cold foil single images and endless decors.</li>
-			<li>No need for any modification of the printing machine.</li>
-			<li>Synchronized with the printing machine.</li>
-			<li>Rail system makes possible different positions to print unit.</li>
-			<li>Foil tension control on unwind and rewind.</li>
-			<li>Foil can be reused and remain true to register.</li>
-			<li>Available in 330 mm, 420 mm and 520 mm, with one, two and three foil stripes.</li>
+			<li>Xử lý nhũ lạnh thiết kế đơn hình và liên tục.</li>
+			<li>Không cần bất kỳ chỉnh sửa của máy in.</li>
+			<li>Đồng bộ hóa với máy in.</li>
+			<li>Hệ thống đường chạy giúp máy có thể in ở các vị trí khác nhau.</li>
+			<li>Kiểm soát độ căng của nhũ qua việc xả bung và tua lại.</li>
+			<li>Nhũ có thể được tái sử dụng và vẫn duy trì độ canh chỉnh chuẩn.</li>
+			<li>Có sẵn với khổ in 330 mm, 420 mm và 520 mm, với một, hai và ba cuộn nhũ.</li>
 			</ul>
         </div> 
 		<div class="col-md-8 portfolio-item">
@@ -244,30 +245,30 @@
           <img class="img-fluid" src="../img/cft/Distorun_093.jpg" alt="">
 	 </div>
 		  <div class="col-md-6">
-			<h6>Specifications - 330 mm model with 3 foil tracks</h6>
+			<h6>Thông số kỹ thuật – thiết bị khổ 330 mm với 3 đường chạy nhũ</h6>
 			<dl class="colon">
-        <dt>Max. working speed:<p class="text-muted text-small">Synchronized with the printing unit</p></dt>
-        <dd>≤ 80 m / min</dd>
-        <dt>Accuracy of positioning image:
-		<p class="text-muted text-small">Depends on the distance between two images</p></dt>
+        <dt>Tốc độ cực đại:<p class="text-muted text-small">Đồng bộ hóa với đơn vị in</p></dt>
+        <dd>≤ 80 m / phút</dd>
+        <dt>Độ chính xác của định vị hình ảnh:
+		<p class="text-muted text-small">Phụ thuộc vào khoảng cách giữa hai hình</p></dt>
         <dd>≤ 0.30 mm</dd>
-        <dt>Min. cold foil width:</dt>
+        <dt>Chiều rộng tối thiểu của nhũ lạnh:</dt>
         <dd>30 mm</dd>
-        <dt>Max. cold foil width</dt>
+        <dt>Chiều rộng tối đa của nhũ lạnh:</dt>
         <dd>330 mm</dd>
-        <dt>Rewind / unwind maximum diameter</dt>
-        <dd>350 mm (3" core)</dd>
-        <dt>Max. number of foil tracks</dt>
+        <dt>Đường kính tối đa khi tua lại / xả ra: </dt>
+        <dd>350 mm (lõi 3 ")</dd>
+        <dt>Số lượng tối đa của đường chạy nhũ: </dt>
         <dd>3</dd>
-        <dt>Electrical requirements</dt>
+        <dt>Yêu cầu về điện:</dt>
         <dd>3 x 400V AC, 50/60Hz, 6kW</dd>
-        <dt>Width</dt>
+        <dt>Chiều rộng:</dt>
         <dd>720 mm</dd>
-		<dt>Depth</dt>
+		<dt>Chiều sâu:</dt>
         <dd>1400 mm</dd>
-		<dt>Height</dt>
+		<dt>Chiều cao:</dt>
         <dd>650 mm</dd>
-		<dt>Weight</dt>
+		<dt>Cân nặng:</dt>
         <dd>380 kg</dd>
       </dl>
     </div>
