--- a/vn/cosmetic.html
+++ b/vn/cosmetic.html
@@ -42,32 +42,35 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#page-top">Home</a>
+           <a class="nav-link js-scroll-trigger" href="#page-top">TRANG CHỦ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#company">Company</a>
+            <a class="nav-link js-scroll-trigger" href="#company">HỒ SƠ CÔNG TY</a>
           </li>
-           <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger" href="index.html#product">Application<span class="dropdown-toggle" data-toggle="dropdown"></a>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#product">SẢN PHẨM</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link js-scroll-trigger" href="index.html#application">ỨNG DỤNG<span class="dropdown-toggle" data-toggle="dropdown"></a>
             <div class="dropdown-menu">
-              <a class="nav-link dropdown-item" href="hotstamp.html">Hot Stamping</a>
-			  <a class="nav-link dropdown-item" href="cftransfer.html">Cold Foil Transfer</a>
-              <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
-              <a class="nav-link dropdown-item" href="textile.html">Textile</a>
-			  <a class="nav-link dropdown-item" href="cosmetic.html">Cosmetics</a>
-              <a class="nav-link dropdown-item" href="ttr-coding.html">TTR & Coding</a>
-              <a class="nav-link dropdown-item" href="card-technology.html">Card Technology</a>
-              <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
+              <a class="nav-link dropdown-item" href="hotstamp.html">CÔNG NGHỆ DẬP NÓNG</a>
+			  <a class="nav-link dropdown-item" href="cftransfer.html">CÔNG NGHỆ PHÔI LẠNH</a>
+              <a class="nav-link dropdown-item" href="plastic.html">NGÀNH NHỰA</a>
+              <a class="nav-link dropdown-item" href="textile.html">NGÀNH VẢI</a>
+			  <a class="nav-link dropdown-item" href="cosmetic.html">MỸ PHẨM</a>
+              <a class="nav-link dropdown-item" href="ttr-coding.html">RUY BĂNG IN MÃ VẠCH & IN HẠN SỬ DỤNG (TTR & CODING)</a>
+              <a class="nav-link dropdown-item" href="card-technology.html">CÔNG NGHỆ THẺ</a>
+              <a class="nav-link dropdown-item" href="brand-enhancement.html">NÂNG CẤP THƯƠNG HIỆU</a>
               <a class="nav-link dropdown-item" href="digital-metal.html">Digital Metal&reg;</a>
-              <a class="nav-link dropdown-item" href="high-security.html">High Security</a>
-              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Stamping Tools</a>
+              <a class="nav-link dropdown-item" href="high-security.html">BẢO MẬT AN NINH CAO</a>
+              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Công Cụ Dập</a>
             </div>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#solutions">Solutions</a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#contact">LIÊN HỆ</a>
           </li>
         </ul>
       </div>
@@ -86,8 +89,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase heading-underline">Cosmetics</h2>
-          <h3 class="section-subheading text-muted">Stamping technology for premium finishing</h3>
+          <h2 class="section-heading text-uppercase heading-underline">MỸ PHẨM</h2>
+          <h3 class="section-subheading text-muted">Công nghệ dập cho lớp hoàn thiện cao cấp</h3>
 		  <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
 		  Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
 		  Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
@@ -101,9 +104,9 @@
 
 	<div class="row">
         <div class="col-md-4 portfolio-item">
-            <h4>Cosmetic Packaging</h4>
-            <p class="text-muted">Get noticed! Cosmetics help to make people look better. Improve the look of your mascaras, lipstick tubes, cream jars, bottles and other forms of plastic packaging, with the wide range of attractive decorative options from KURZ.</p>
-			<p class="text-muted">Whether traditional metal tones like silver and gold, trendy colors, pigment or diffractive films, high-gloss or matt, our extensive range of films offers an unrivaled selection for your individual design. This adds an impressive value perception and differentiation to your products.</p>
+            <h4>Bao Bì Mỹ Phẩm</h4>
+            <p class="text-muted">Được chú ý! Mỹ phẩm giúp mọi người trông tuyệt hơn. Cải thiện vẻ ngoài sản phẩm mascara của bạn, thỏi son môi, lọ kem, chai và các hình thức bao bì nhựa khác, với một loạt các tùy chọn trang trí hấp dẫn từ KURZ.</p>
+			<p class="text-muted">Cho dù đó là các tông màu kim loại truyền thống như bạc và vàng, màu sắc hợp thời trang, mày sơn hoặc màng nhiễu xạ, độ bóng cao hoặc mờ, các loại màng đa dạng của chúng tôi cung cấp lựa chọn độc nhất vô nhị cho thiết kế riêng của bạn. Điều này làm gia tăng nhận thức giá trị ấn tượng và sự khác biệt cho sản phẩm bạn.</p>
 		</div>
 	    <div class="col-md-4 portfolio-item">
         <div class="row">
