--- a/vn/high-security.html
+++ b/vn/high-security.html
@@ -42,32 +42,35 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#page-top">Home</a>
+            <a class="nav-link js-scroll-trigger" href="#page-top">TRANG CHỦ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#company">Company</a>
+            <a class="nav-link js-scroll-trigger" href="#company">HỒ SƠ CÔNG TY</a>
           </li>
-           <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger" href="index.html#product">Application<span class="dropdown-toggle" data-toggle="dropdown"></a>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#product">SẢN PHẨM</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link js-scroll-trigger" href="index.html#application">ỨNG DỤNG<span class="dropdown-toggle" data-toggle="dropdown"></a>
             <div class="dropdown-menu">
-              <a class="nav-link dropdown-item" href="hotstamp.html">Hot Stamping</a>
-			  <a class="nav-link dropdown-item" href="cftransfer.html">Cold Foil Transfer</a>
-              <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
-              <a class="nav-link dropdown-item" href="textile.html">Textile</a>
-			  <a class="nav-link dropdown-item" href="cosmetic.html">Cosmetics</a>
-              <a class="nav-link dropdown-item" href="ttr-coding.html">TTR & Coding</a>
-              <a class="nav-link dropdown-item" href="card-technology.html">Card Technology</a>
-              <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
+              <a class="nav-link dropdown-item" href="hotstamp.html">CÔNG NGHỆ DẬP NÓNG</a>
+			  <a class="nav-link dropdown-item" href="cftransfer.html">CÔNG NGHỆ PHÔI LẠNH</a>
+              <a class="nav-link dropdown-item" href="plastic.html">NGÀNH NHỰA</a>
+              <a class="nav-link dropdown-item" href="textile.html">NGÀNH VẢI</a>
+			  <a class="nav-link dropdown-item" href="cosmetic.html">MỸ PHẨM</a>
+              <a class="nav-link dropdown-item" href="ttr-coding.html">RUY BĂNG IN MÃ VẠCH & IN HẠN SỬ DỤNG (TTR & CODING)</a>
+              <a class="nav-link dropdown-item" href="card-technology.html">CÔNG NGHỆ THẺ</a>
+              <a class="nav-link dropdown-item" href="brand-enhancement.html">NÂNG CẤP THƯƠNG HIỆU</a>
               <a class="nav-link dropdown-item" href="digital-metal.html">Digital Metal&reg;</a>
-              <a class="nav-link dropdown-item" href="high-security.html">High Security</a>
-              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Stamping Tools</a>
+              <a class="nav-link dropdown-item" href="high-security.html">BẢO MẬT AN NINH CAO</a>
+              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Công Cụ Dập</a>
             </div>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#solutions">Solutions</a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#contact">LIÊN HỆ</a>
           </li>
         </ul>
       </div>
@@ -86,8 +89,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase heading-underline">High Security</h2>
-          <h3 class="section-subheading text-muted">Solutions for brands, banknotes and documents</h3>
+          <h2 class="section-heading text-uppercase heading-underline">BẢO MẬT AN NINH CAO</h2>
+          <h3 class="section-subheading text-muted">Giải pháp cho thương hiệu, tiền giấy và tài liệu</h3>
 		  <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
 		  Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
 		  Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
@@ -110,9 +113,9 @@
         </div>  
 		<div class="col-md-4">
 		  <div class="portfolio-caption">
-            <h4>Banknote Security</h4>
-            <p class="text-muted">For 30 years, KURZ is the world's leading provider of banknote security foils and foil technology. Central Banks in more than 80 countries have placed their trust in KURZ to secure their currencies against counterfeiting threats, and enhance the optical attractiveness of their banknotes.</p>
-			<p class="text-muted">The proprietary KINEGRAM optical technology, developed by KURZ subsidiary OVD Kinegram, and our strong innovative capacity are setting the benchmarks for highly sophisticated and successful security features.</p>
+            <h4>Bảo Mật trên Tiền </h4>
+            <p class="text-muted">Trong 30 năm, KURZ là nhà cung cấp công nghệ nhũ và bảo mật trên tiền hàng đầu thế giới. Các Ngân hàng Trung ương tại hơn 80 quốc gia đã đặt niềm tin vào KURZ để bảo đảm tiền tệ của họ chống lại các mối đe dọa giả mạo và tăng sự hấp dẫn về mặt quang học cho tiền.</p>
+			<p class="text-muted">Công nghệ quang học KINEGRAM độc quyền, được phát triển bởi công ty con OVD Kinegram của KURZ và khả năng cải tiến mạnh mẽ của chúng tôi đang thiết lập các tiêu chuẩn về các tính năng bảo mật rất tinh vi phức tạp và hiệu quả.</p>
           </div>
         </div>
 	</div>
@@ -120,9 +123,9 @@
 	<br/>
 	<div class="row">
         <div class="col-md-4 portfolio-item">
-            <h4>Government Documents</h4>
-            <p class="text-muted">OVD Kinegram, subsidiary of KURZ in Switzerland and inventor of the KINEGRAM® optical technology for security foils, is the global leader in the supply of high security foil devices to protect government-issued documents, such as passports or ID cards.</p>
-			<p class="text-muted">Champion of the industry for over 30 years, OVD Kinegram's latest innovations focus on the unique integration of digital and physical security technologies as well as smartphone-based digital document verification.</p>
+            <h4>Tài liệu Chính phủ</h4>
+            <p class="text-muted">OVD Kinegram, công ty con của KURZ tại Thụy Sĩ và là nhà phát minh ra công nghệ quang học KINEGRAM® cho nhũ bảo an, là công ty hàng đầu thế giới trong việc cung cấp các thiết bị nhũ bảo an cao để bảo vệ các tài liệu do chính phủ cấp, như hộ chiếu hoặc căn cước.</p>
+			<p class="text-muted">Dẫn đầu trong ngành trong hơn 30 năm, những cải tiến mới nhất của OVD Kinegram tập trung vào sự tích hợp độc đáo của các công nghệ bảo mật kỹ thuật số và vật lý cũng như xác minh tài liệu kỹ thuật số dựa trên điện thoại thông minh.</p>
         </div>
 	    <div class="col-md-4 portfolio-item">
           <img class="img-fluid" src="../img/HISEC/G01.jpg" alt="">
