--- a/vn/hot-stamping-dies.html
+++ b/vn/hot-stamping-dies.html
@@ -26,7 +26,11 @@
 </head>
 
 <body id="page-top" class="subpages">
-
+<div style="position:fixed;top: 25%;right: 0;border: 1px solid black;background-color: rgba(0,0,0,0.8);padding: 10px 10px 10px 15px;border-top-left-radius: 20%;border-bottom-left-radius: 20%;color: white;">
+      <a href="../index.html" style="color: white;">English</a>
+		<hr style="color: white;">
+      <a href="vn/index.html" style="color: white;">Tiếng Việt</a>
+    </div>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
     <div class="container">
@@ -38,32 +42,35 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#page-top">Home</a>
+            <a class="nav-link js-scroll-trigger" href="#page-top">TRANG CHỦ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#company">Company</a>
+            <a class="nav-link js-scroll-trigger" href="#company">HỒ SƠ CÔNG TY</a>
           </li>
-           <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger" href="index.html#product">Application<span class="dropdown-toggle" data-toggle="dropdown"></a>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#product">SẢN PHẨM</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link js-scroll-trigger" href="index.html#application">ỨNG DỤNG<span class="dropdown-toggle" data-toggle="dropdown"></a>
             <div class="dropdown-menu">
-              <a class="nav-link dropdown-item" href="hotstamp.html">Hot Stamping</a>
-			  <a class="nav-link dropdown-item" href="cftransfer.html">Cold Foil Transfer</a>
-              <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
-              <a class="nav-link dropdown-item" href="textile.html">Textile</a>
-			  <a class="nav-link dropdown-item" href="cosmetic.html">Cosmetics</a>
-              <a class="nav-link dropdown-item" href="ttr-coding.html">TTR & Coding</a>
-              <a class="nav-link dropdown-item" href="card-technology.html">Card Technology</a>
-              <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
+              <a class="nav-link dropdown-item" href="hotstamp.html">CÔNG NGHỆ DẬP NÓNG</a>
+			  <a class="nav-link dropdown-item" href="cftransfer.html">CÔNG NGHỆ PHÔI LẠNH</a>
+              <a class="nav-link dropdown-item" href="plastic.html">NGÀNH NHỰA</a>
+              <a class="nav-link dropdown-item" href="textile.html">NGÀNH VẢI</a>
+			  <a class="nav-link dropdown-item" href="cosmetic.html">MỸ PHẨM</a>
+              <a class="nav-link dropdown-item" href="ttr-coding.html">RUY BĂNG IN MÃ VẠCH & IN HẠN SỬ DỤNG (TTR & CODING)</a>
+              <a class="nav-link dropdown-item" href="card-technology.html">CÔNG NGHỆ THẺ</a>
+              <a class="nav-link dropdown-item" href="brand-enhancement.html">NÂNG CẤP THƯƠNG HIỆU</a>
               <a class="nav-link dropdown-item" href="digital-metal.html">Digital Metal&reg;</a>
-              <a class="nav-link dropdown-item" href="high-security.html">High Security</a>
-              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Stamping Tools</a>
+              <a class="nav-link dropdown-item" href="high-security.html">BẢO MẬT AN NINH CAO</a>
+              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Công Cụ Dập</a>
             </div>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#solutions">Solutions</a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#contact">LIÊN HỆ</a>
           </li>
         </ul>
       </div>
@@ -82,8 +89,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase heading-underline">Hot Stamping Dies</h2>
-          <h3 class="section-subheading text-muted">Innovation meets precision</h3>
+          <h2 class="section-heading text-uppercase heading-underline">KHUÔN DẬP NÓNG</h2>
+          <h3 class="section-subheading text-muted">Đổi mới cùng với sự chuẩn xác</h3>
 		  <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
 		  Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
 		  Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
@@ -105,13 +112,13 @@
         </div>
         <div class="col-md-4">
           <div class="portfolio-caption">
-            <h4>Dies & Tools</h4>
-            <p class="text-muted">Modern processes allow high-quality decorations in the packaging industry. Labels, folding carton, book covers, box wraps, greeting cards, and much more are decorated. Our dies are highly precise, impressive and sharp contour stampings, all which inspire the spectator.</p>
-            <p class="text-muted">Our latest development: <strong>NanoEmbossing</strong>, offers the design of new patterns, flows, satin finish, photographic effects and much more.</p>
+            <h4>Khuôn & Công cụ</h4>
+            <p class="text-muted">Các quy trình hiện đại giúp cho việc trang trí đạt chất lượng cao trong ngành bao bì. Nhãn, thùng carton, bìa sách, bọc hộp, thiệp chúc mừng, và nhiều sản phẩm hơn nữa được trang trí. Khuôn của chúng tôi cực kỳ chính xác, dễ sử dụng, có thể tạo ra các đường viền sắc nét khi ép và chúng tôi có tất cả những thứ mà bạn cần để gây ấn tượng với khách hàng của mình.</p>
+            <p class="text-muted">Phát triển mới nhất của chúng tôi: <strong> Dập nổi kích thước siêu nhỏ (NanoEmbossing)</strong>, cung cấp thiết kế các họa tiết mới, những đường sóng, lớp hoàn thiện mượt mà như satin, hiệu ứng ảnh và nhiều hơn nữa.</p>
 		  </div>
 		  <div class="portfolio-caption">     
-			<h4>Accessories</h4>
-            <p class="text-muted"> &#8226 &nbsp Adhesive Tapes <br> &#8226 &nbsp Rubber Mats <br> &#8226 &nbsp Make-Ready Materials <br> &#8226 &nbsp Copper Brush <br> &#8226 &nbsp Polishing Paste</p>
+			<h4>Phụ kiện</h4>
+            <p class="text-muted"> &#8226 &nbsp Băng keo <br> &#8226 &nbsp Thảm cao su <br> &#8226 &nbsp Vật liệu chêm <br> &#8226 &nbsp Bàn chải đồng <br> &#8226 &nbsp Đồ đánh bóng</p>
           </div>
         </div>
     </div>
