--- a/vn/hotstamp.html
+++ b/vn/hotstamp.html
@@ -42,20 +42,23 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#page-top">TRANG CHỦ</a>
+            <a class="nav-link js-scroll-trigger" href="#page-top">TRANG CHỦ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#company">HỒ SƠ CÔNG TY</a>
+            <a class="nav-link js-scroll-trigger" href="#company">HỒ SƠ CÔNG TY</a>
+          </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#product">SẢN PHẨM</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger" href="index.html#product">Application<span class="dropdown-toggle" data-toggle="dropdown"></a>
+            <a class="nav-link js-scroll-trigger" href="index.html#application">ỨNG DỤNG<span class="dropdown-toggle" data-toggle="dropdown"></a>
             <div class="dropdown-menu">
               <a class="nav-link dropdown-item" href="hotstamp.html">CÔNG NGHỆ DẬP NÓNG</a>
 			  <a class="nav-link dropdown-item" href="cftransfer.html">CÔNG NGHỆ PHÔI LẠNH</a>
               <a class="nav-link dropdown-item" href="plastic.html">NGÀNH NHỰA</a>
               <a class="nav-link dropdown-item" href="textile.html">NGÀNH VẢI</a>
-              <a class="nav-link dropdown-item" href="cosmetic.html">MỸ PHẨM</a>
-              <a class="nav-link dropdown-item" href="ttr-coding.html">TTR & Coding</a>
+			  <a class="nav-link dropdown-item" href="cosmetic.html">MỸ PHẨM</a>
+              <a class="nav-link dropdown-item" href="ttr-coding.html">RUY BĂNG IN MÃ VẠCH & IN HẠN SỬ DỤNG (TTR & CODING)</a>
               <a class="nav-link dropdown-item" href="card-technology.html">CÔNG NGHỆ THẺ</a>
               <a class="nav-link dropdown-item" href="brand-enhancement.html">NÂNG CẤP THƯƠNG HIỆU</a>
               <a class="nav-link dropdown-item" href="digital-metal.html">Digital Metal&reg;</a>
@@ -67,7 +70,7 @@
             <a class="nav-link js-scroll-trigger" href="index.html#solutions">Solutions</a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="vn/index.html#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="vn/index.html#contact">LIÊN HỆ</a>
           </li>
         </ul>
       </div>
@@ -86,8 +89,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase heading-underline">Hot Stamping</h2>
-          <h3 class="section-subheading">The most beautiful of all finishes. No other print process comes close in comparison to the performance of hot stamping.</h3>
+          <h2 class="section-heading text-uppercase heading-underline">CÔNG NGHỆ DẬP NÓNG</h2>
+          <h3 class="section-subheading">Những hiệu ứng hoàn thiện đẹp nhất từng thấy. Không có một quy trình in nào có thể so sánh được hiệu ứng của dập nóng.</h3>
           <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
           Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
           Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
@@ -124,10 +127,10 @@
         </div>
         <div class="col-md">
           <div class="portfolio-caption">
-            <h4>Books, Magazines, Calendars, Namecards</h4>
-            <p class="text-muted">Application of hot stamping foil is possible on a wide range of substrates. Even small order and short runs can also be unique, beautiful and cost effective.</p>
-			<p class="text-muted">Hot stamping foils offers incomparable gloss, unique tactile quality and impressive 3D effects.</p>
-			<h6> For more information:</h6>
+            <h4>Sách, Tạp chí, Lịch, Danh thiếp</h4>
+            <p class="text-muted">Có thể ép nhũ dập nóng lên rất nhiều loại vật liệu. Ngay cả đơn hàng nhỏ và sản xuất ngắn hạn cũng có thể độc đáo, đẹp với chi phí hợp lý.</p>
+			<p class="text-muted">Nhũ dập nóng đem lại hiệu ứng xúc giác và độ bóng độc đáo không thể so sánh được với hiệu ứng 3D ấn tượng.</p>
+			<h6> Tham khảo thêm thông tin:</h6>
 			<h6><a href="https://www.kurz-graphics.com">https://www.kurz-graphics.com/</a></h6>
 		  </div>
         </div>
@@ -135,8 +138,8 @@
 
       <div class="row">
         <div class="col-md-4 portfolio-item">
-          <h4>Consumer Goods Packaging</h4>
-          <p class="text-muted">Hot foil stamping is one of the high-visibility enhancements for product packaging. Not only that it will help attract consumer attention faster and keep them longer than products with ordinary packaging, your product will also look more elegant. Which usually would result in an increase in sales, with only a tiny increase in cost.</p>
+          <h4>Bao bì hàng tiêu dùng</h4>
+          <p class="text-muted">Nhũ dập nóng là một trong những cải tiến về khả năng nhận diện cho bao bì sản phẩm. Không chỉ vậy nó sẽ giúp thu hút sự chú ý của người tiêu dùng nhanh hơn và lâu hơn các sản phẩm với bao bì thông thường, sản phẩm của bạn cũng sẽ trông thanh lịch hơn. Điều này thường sẽ dẫn đến tăng doanh số bán hàng, chỉ với một sự gia tăng nhỏ trong chi phí.</p>
         </div>
         <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="../img/graphics/gr11.jpg" alt="">
