--- a/vn/plastic.html
+++ b/vn/plastic.html
@@ -42,32 +42,35 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#page-top">Home</a>
+            <a class="nav-link js-scroll-trigger" href="#page-top">TRANG CHỦ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#company">Company</a>
+            <a class="nav-link js-scroll-trigger" href="#company">HỒ SƠ CÔNG TY</a>
           </li>
-           <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger" href="index.html#product">Application<span class="dropdown-toggle" data-toggle="dropdown"></a>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#product">SẢN PHẨM</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link js-scroll-trigger" href="index.html#application">ỨNG DỤNG<span class="dropdown-toggle" data-toggle="dropdown"></a>
             <div class="dropdown-menu">
-              <a class="nav-link dropdown-item" href="hotstamp.html">Hot Stamping</a>
-			  <a class="nav-link dropdown-item" href="cftransfer.html">Cold Foil Transfer</a>
-              <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
-              <a class="nav-link dropdown-item" href="textile.html">Textile</a>
-			  <a class="nav-link dropdown-item" href="cosmetic.html">Cosmetics</a>
-              <a class="nav-link dropdown-item" href="ttr-coding.html">TTR & Coding</a>
-              <a class="nav-link dropdown-item" href="card-technology.html">Card Technology</a>
-              <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
+              <a class="nav-link dropdown-item" href="hotstamp.html">CÔNG NGHỆ DẬP NÓNG</a>
+			  <a class="nav-link dropdown-item" href="cftransfer.html">CÔNG NGHỆ PHÔI LẠNH</a>
+              <a class="nav-link dropdown-item" href="plastic.html">NGÀNH NHỰA</a>
+              <a class="nav-link dropdown-item" href="textile.html">NGÀNH VẢI</a>
+			  <a class="nav-link dropdown-item" href="cosmetic.html">MỸ PHẨM</a>
+              <a class="nav-link dropdown-item" href="ttr-coding.html">RUY BĂNG IN MÃ VẠCH & IN HẠN SỬ DỤNG (TTR & CODING)</a>
+              <a class="nav-link dropdown-item" href="card-technology.html">CÔNG NGHỆ THẺ</a>
+              <a class="nav-link dropdown-item" href="brand-enhancement.html">NÂNG CẤP THƯƠNG HIỆU</a>
               <a class="nav-link dropdown-item" href="digital-metal.html">Digital Metal&reg;</a>
-              <a class="nav-link dropdown-item" href="high-security.html">High Security</a>
-              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Stamping Tools</a>
+              <a class="nav-link dropdown-item" href="high-security.html">BẢO MẬT AN NINH CAO</a>
+              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Công Cụ Dập</a>
             </div>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#solutions">Solutions</a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#contact">LIÊN HỆ</a>
           </li>
         </ul>
       </div>
@@ -86,8 +89,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase heading-underline">Plastics</h2>
-          <h3 class="section-subheading text-muted">New decoration solutions for plastic components</h3>
+          <h2 class="section-heading text-uppercase heading-underline">NGÀNH NHỰA</h2>
+          <h3 class="section-subheading text-muted">Giải pháp trang trí mới cho các linh kiện nhựa</h3>
           <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
           Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
           Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
@@ -125,14 +128,14 @@
         </div>
 		<div class="col-md-4">
           <div class="offset-sm-1 portfolio-caption">
-            <h4>Automotive</h4>
-            <p class="text-muted">Being the experts for challenging hot stamping projects with complex geometry using genuine chrome, we provide a convincing alternative to electroplating with our solution of specially developed chrome foils and customized machines.</p>
-            <p class="text-muted">Benefits:</p>
+            <h4>Ô tô</h4>
+            <p class="text-muted">Là chuyên gia cho các dự án dập nóng đầy thử thách với hình học phức tạp sử dụng Crôm thật, chúng tôi cung cấp một giải pháp thay thế thuyết phục cho việc mạ Crôm bằng giải pháp của chúng tôi bằng việc đặc biệt phát triển nhũ Crôm và các loại máy được thiết kế riêng theo yêu cầu.</p>
+            <p class="text-muted">Lợi ích:</p>
 			<ul class="text-muted">
-			<li><strong>Save up to 65% cost</strong> with KURZ chrome finishes compared to electroplating</li>
-			<li>Top-quality <strong>chrome shine</strong> and <strong>optimum durability</strong></li>
-			<li>Unique technology combining a high-tech hot stamping machine with <strong>genuine chrome coating</strong></li>
-			<li>Cost efficient partial chrome decoration can only be done with hot stamping technology</li>
+			<li><strong>Tiết kiệm tới 65% chi phí</strong> với lớp mạ chrome KURZ so với mạ điện</li>
+			<li>Chất lượng Crôm <strong>sáng bóng hàng đầu</strong> và <strong>độ bền tối ưu</strong></li>
+			<li>Công nghệ độc đáo kết hợp máy dập nóng công nghệ cao với <strong>lớp mạ Crôm thật</strong></li>
+			<li>Chi phí trang trí hiệu quả một phần Crôm chỉ có thể được thực hiện với công nghệ dập nóng</li>
 			</ul>
 		  </div>
         </div>
@@ -142,14 +145,14 @@
 	<br/>
       <div class="row">
         <div class="col-md-4 portfolio-item no-padding">
-          <h4>Consumer Electronics & Home Appliances</h4>
-          <p class="text-muted">No matter what design you opt for, we can deliver. We are the <strong>only company in the world that can offer all finishing processes from a single source:</strong></p>
+          <h4>Điện Tử Gia Dụng & Thiết Bị Gia Dụng</h4>
+          <p class="text-muted">Bất kể bạn chọn thiết kế nào, chúng tôi đều có thể cung cấp. Chúng tôi là <strong>công ty duy nhất trên thế giới có thể cung cấp tất cả các quy trình hoàn thiện từ một nguồn duy nhất:</strong></p>
         <ul class="text-muted">
-		<li>IMD (In-Mold-Decoration)</li>
+		<li>IMD (Trang trí trong khuôn)</li>
 		<li>Insert Molding</li>
-		<li>PMD technology (PC screen printing)</li>
+		<li>Công nghệ PMD (in màn hình PC)</li>
 		<li>IPD-Skin (Individual Post Decoration Skin)</li>
-		<li>and hot stamping.</li>
+		<li>và dập nóng.</li>
 		</ul>
 		</div>
         <div class="col-md-8 portfolio-item no-padding">
@@ -225,13 +228,13 @@
 		<div class="col-md">
           <div class="portfolio-caption">
             <h4>PolyIC</h4>
-			<p class="text-muted">Compared with complex OCA technology, our new integration process for machine-based sensor application saves time and money while maintaining optimum functional reliability. The sensors are firmly bonded to the component, along with their tail, and are then immediately functional.</p>
-			<h6>Benefits</h6>
+			<p class="text-muted">So với công nghệ OCA phức tạp, quy trình tích hợp mới của chúng tôi cho ứng dụng cảm biến dựa trên thiết bị giúp tiết kiệm thời gian và tiền bạc mà vẫn duy trì độ tin cậy chức năng tối đa. Các cảm biến được liên kết chắc chắn với từng phần, cùng với phần kết nối của chúng, và sau đó ngay lập tức hoạt động.</p>
+			<h6>Lợi ích</h6>
 			<ul class="text-muted">
-			<li>Smart and functional plastics with PolyIC touch sensors</li>
-			<li>Even curved surfaces are possible with PolyTC®</li>
-			<li>PolyTC® silver metal mesh offers better conductivity than ITO</li>
-			<li>Best cost ratio due to connector and tail integration</li>
+			<li>Thiết bị nhựa chức năng thông minh với cảm biến cảm ứng PolyIC</li>
+			<li>Ngay cả các bề mặt cong cũng có thể với PolyTC®</li>
+			<li>Lưới kim loại bạc PolyTC® mang lại độ dẫn điện tốt hơn ITO</li>
+			<li>Tỷ lệ chi phí tốt nhất do tích hợp liên kết và phần kết nối.</li>
 			</ul>
 		  </div>
         </div>
@@ -254,9 +257,9 @@
 	  <div class="row-special">
           <div class="col-md-4">
 		  <div class="portfolio-caption">
-            <h4>Stationary</h4>
-            <p class="text-muted">The same concept of hot stamping applied onto stationeries.</p>
-			<p class="text-muted">Writing & measuring instruments, and almost all office supplies could be enhanced with hot stamping!</p>
+            <h4>Văn phòng phẩm</h4>
+            <p class="text-muted">Với cùng một khái niệm tương tự của dập nóng được áp dụng lên văn phòng phẩm.</p>
+			<p class="text-muted">Dụng cụ viết và đo lường, và hầu hết tất cả các đồ dùng văn phòng đều có thể được nâng cấp với giải pháp dập nóng!</p>
           </div>
 		  </div>
 	  <div class="col-md-4 portfolio-item no-padding">
