--- a/vn/textile.html
+++ b/vn/textile.html
@@ -42,32 +42,35 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#page-top">TRANG CHỦ</a>
+            <a class="nav-link js-scroll-trigger" href="#page-top">TRANG CHỦ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#company">HỒ SƠ CÔNG TY</a>
+            <a class="nav-link js-scroll-trigger" href="#company">HỒ SƠ CÔNG TY</a>
           </li>
-           <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger" href="index.html#product">ỨNG DỤNG<span class="dropdown-toggle" data-toggle="dropdown"></a>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#product">SẢN PHẨM</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link js-scroll-trigger" href="index.html#application">ỨNG DỤNG<span class="dropdown-toggle" data-toggle="dropdown"></a>
             <div class="dropdown-menu">
-              <a class="nav-link dropdown-item" href="hotstamp.html">Hot Stamping</a>
-			  <a class="nav-link dropdown-item" href="cftransfer.html">Cold Foil Transfer</a>
-              <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
-              <a class="nav-link dropdown-item" href="textile.html">Textile</a>
-			  <a class="nav-link dropdown-item" href="cosmetic.html">Cosmetics</a>
-              <a class="nav-link dropdown-item" href="ttr-coding.html">TTR & Coding</a>
-              <a class="nav-link dropdown-item" href="card-technology.html">Card Technology</a>
-              <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
+              <a class="nav-link dropdown-item" href="hotstamp.html">CÔNG NGHỆ DẬP NÓNG</a>
+			  <a class="nav-link dropdown-item" href="cftransfer.html">CÔNG NGHỆ PHÔI LẠNH</a>
+              <a class="nav-link dropdown-item" href="plastic.html">NGÀNH NHỰA</a>
+              <a class="nav-link dropdown-item" href="textile.html">NGÀNH VẢI</a>
+			  <a class="nav-link dropdown-item" href="cosmetic.html">MỸ PHẨM</a>
+              <a class="nav-link dropdown-item" href="ttr-coding.html">RUY BĂNG IN MÃ VẠCH & IN HẠN SỬ DỤNG (TTR & CODING)</a>
+              <a class="nav-link dropdown-item" href="card-technology.html">CÔNG NGHỆ THẺ</a>
+              <a class="nav-link dropdown-item" href="brand-enhancement.html">NÂNG CẤP THƯƠNG HIỆU</a>
               <a class="nav-link dropdown-item" href="digital-metal.html">Digital Metal&reg;</a>
-              <a class="nav-link dropdown-item" href="high-security.html">High Security</a>
-              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Stamping Tools</a>
+              <a class="nav-link dropdown-item" href="high-security.html">BẢO MẬT AN NINH CAO</a>
+              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Công Cụ Dập</a>
             </div>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#solutions">Solutions</a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#contact">LIÊN HỆ</a>
           </li>
         </ul>
       </div>
@@ -86,8 +89,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase heading-underline">Textile</h2>
-          <h3 class="section-subheading text-muted">Textile Foils for glamorous appearances</h3>
+          <h2 class="section-heading text-uppercase heading-underline">NGÀNH VẢI</h2>
+          <h3 class="section-subheading text-muted">Nhũ ép lên vải cho thiết kế lôi cuốn</h3>
 		  <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
 		  Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
 		  Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
@@ -111,9 +114,9 @@
         </div>
         <div class="col-md-4">
           <div class="portfolio-caption">
-            <h4>Fashion</h4>
-            <p class="text-muted">The transfer of the foil to the substrate can be accomplished by up-and-down process, heat transfer calenders or single roll calenders. For this application the textile has to be pre-treated with suitable adhesives.</p>
-			<p class="text-muted">The transfer process bonds the foil to the pre-treated textile or artificial leather. In the case of textiles the adhesive of the foil will only adhere to wherever the adhesive is printed.</p>
+            <h4>Thời trang</h4>
+            <p class="text-muted">Việc chuyển nhũ sang vật liệu có thể được thực hiện bằng quy trình ép dập, cán theo cuộn truyền nhiệt hoặc cán theo cuộn đơn. Đối với ứng dụng này, vải đó phải được xử lý trước bằng keo phù hợp.</p>
+			<p class="text-muted">Quá trình chuyển nhiệt, liên kết nhũ với vải hoặc da nhân tạo đã được xử lý trước. Trong trường hợp vải, nhũ chỉ ép lên phần có phủ keo.</p>
           </div>
         </div>
 		</div>
@@ -175,9 +178,9 @@
 		
 		<div class="row mt-md-5">
         <div class="col-md-4 portfolio-item">
-            <h4>Safety Equipment</h4>
-            <p class="text-muted">Our heat reflective and resistant technical foil could be used as <strong>protection against radiant heat, mechanical and thermal exposure, even to splash of liquid metal.</strong></p>
-			<p class="text-muted">These special technical foils could be applied on <strong>thermal protective gloves, protective and reflective clothing for firefighters and industrial workers exposed to heat.</strong> Not only that it is <strong>recommended for steel cookers, but also for heat protection in the automotive and aircraft industry.</strong></p>
+            <h4>Thiết Bị An Toàn</h4>
+            <p class="text-muted">Nhũ kỹ thuật chịu nhiệt và phản xạ nhiệt của chúng tôi có thể được sử dụng như là <strong>một lớp bảo vệ chống lại bức xạ nhiệt, khi tiếp xúc cơ học và nhiệt, thậm chí dùng để bảo vệ khỏi vết vẩy kim loại lỏng.</strong></p>
+			<p class="text-muted">Những nhũ kỹ thuật đặc biệt này có thể được áp dụng trên <strong>găng tay bảo vệ nhiệt, quần áo bảo hộ và phản nhiệt cho lính cứu hỏa và công nhân tiếp xúc với nhiệt.</strong> Nó không chỉ được <strong>gợi ý sử dụng cho nồi áp suất, mà còn cho việc bảo vệ nhiệt trong ngành công nghiệp ô tô và máy bay.</strong></p>
         </div>
 		<div class="col-md-4 portfolio-item">
 			<img class="img-fluid" src="../img/Textile/tx12.jpg" alt="">        
