--- a/vn/ttr-coding.html
+++ b/vn/ttr-coding.html
@@ -26,7 +26,11 @@
 </head>
 
 <body id="page-top" class="subpages">
-
+<div style="position:fixed;top: 25%;right: 0;border: 1px solid black;background-color: rgba(0,0,0,0.8);padding: 10px 10px 10px 15px;border-top-left-radius: 20%;border-bottom-left-radius: 20%;color: white;">
+      <a href="../index.html" style="color: white;">English</a>
+		<hr style="color: white;">
+      <a href="vn/index.html" style="color: white;">Tiếng Việt</a>
+    </div>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
     <div class="container">
@@ -38,32 +42,35 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#page-top">Home</a>
+            <a class="nav-link js-scroll-trigger" href="#page-top">TRANG CHỦ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#company">Company</a>
+            <a class="nav-link js-scroll-trigger" href="#company">HỒ SƠ CÔNG TY</a>
           </li>
-           <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger" href="index.html#product">Application<span class="dropdown-toggle" data-toggle="dropdown"></a>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#product">SẢN PHẨM</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link js-scroll-trigger" href="index.html#application">ỨNG DỤNG<span class="dropdown-toggle" data-toggle="dropdown"></a>
             <div class="dropdown-menu">
-              <a class="nav-link dropdown-item" href="hotstamp.html">Hot Stamping</a>
-			  <a class="nav-link dropdown-item" href="cftransfer.html">Cold Foil Transfer</a>
-              <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
-              <a class="nav-link dropdown-item" href="textile.html">Textile</a>
-			  <a class="nav-link dropdown-item" href="cosmetic.html">Cosmetics</a>
-              <a class="nav-link dropdown-item" href="ttr-coding.html">TTR & Coding</a>
-              <a class="nav-link dropdown-item" href="card-technology.html">Card Technology</a>
-              <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
+              <a class="nav-link dropdown-item" href="hotstamp.html">CÔNG NGHỆ DẬP NÓNG</a>
+			  <a class="nav-link dropdown-item" href="cftransfer.html">CÔNG NGHỆ PHÔI LẠNH</a>
+              <a class="nav-link dropdown-item" href="plastic.html">NGÀNH NHỰA</a>
+              <a class="nav-link dropdown-item" href="textile.html">NGÀNH VẢI</a>
+			  <a class="nav-link dropdown-item" href="cosmetic.html">MỸ PHẨM</a>
+              <a class="nav-link dropdown-item" href="ttr-coding.html">RUY BĂNG IN MÃ VẠCH & IN HẠN SỬ DỤNG (TTR & CODING)</a>
+              <a class="nav-link dropdown-item" href="card-technology.html">CÔNG NGHỆ THẺ</a>
+              <a class="nav-link dropdown-item" href="brand-enhancement.html">NÂNG CẤP THƯƠNG HIỆU</a>
               <a class="nav-link dropdown-item" href="digital-metal.html">Digital Metal&reg;</a>
-              <a class="nav-link dropdown-item" href="high-security.html">High Security</a>
-              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Stamping Tools</a>
+              <a class="nav-link dropdown-item" href="high-security.html">BẢO MẬT AN NINH CAO</a>
+              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Công Cụ Dập</a>
             </div>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#solutions">Solutions</a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#contact">LIÊN HỆ</a>
           </li>
         </ul>
       </div>
@@ -82,8 +89,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase heading-underline">TTR & Coding</h2>
-          <h3 class="section-subheading text-muted">Thermal-transfer know-how from Germany</h3>
+          <h2 class="section-heading text-uppercase heading-underline">RUY BĂNG IN MÃ VẠCH & HẠN SỬ DỤNG </h2>
+          <h3 class="section-subheading text-muted">Bí quyết truyền nhiệt từ Đức</h3>
 		  
 		  <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
 		  Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
@@ -106,21 +113,21 @@
           </div>
 		   <div class="col-md-4">
           <div class="portfolio-caption">
-            <h4>Thermal-transfer foils Product Lines</h4>
-            <p class="text-muted">The KURZ Group is a globally active corporation and the only producer of thermal-transfer foils in Germany. We have been producing ink ribbons for thermal-transfer printing since 1991. Our products and services are available worldwide.</p>
+            <h4>TTR – Ruy Băng Truyền Nhiệt</h4>
+            <p class="text-muted">Tập đoàn KURZ là một tập đoàn hoạt động toàn cầu và là nhà sản xuất duy nhất về nhũ chuyển nhiệt ở Đức. Chúng tôi đã và đang sản xuất ruy băng mực để in chuyển nhiệt từ năm 1991. Sản phẩm và dịch vụ của chúng tôi có mặt trên toàn thế giới.</p>
 			<ul>
-			<li>Wax Ribbons</li>
-			<li>Wax-Resin Ribbons</li>
-			<li>Resin Ribbons</li>
-			<li>Near-Edge Ribbons</li>
-			<li>Special Applications</li>
+			<li>Ruy băng Wax</li>
+			<li>Ruy băng Wax-Resin</li>
+			<li>Ruy băng Resin</li>
+			<li>Ruy băng cho đầu in nghiêng</li>
+			<li>Ứng dụng đặc biệt</li>
 			</ul>
 			
-			<h4>General Uses</h4>
+			<h4>Công Dụng Chung</h4>
             <ul>
-			<li>Barcodes</li>
-			<li>Labels</li>
-			<li>Clothing Labels</li>
+			<li>Mã vạch</li>
+			<li>Nhãn</li>
+			<li>Nhãn quần áo</li>
 			</ul>
           </div>
         </div>
@@ -156,9 +163,9 @@
 		<div class="col-md">
           <div class="portfolio-caption">
             <h4>Color your brand®</h4>
-            <p class="text-muted">Thermal-transfer foils in your corporate color. Anyone can do black. Color print catches eyes. Also available in metalized colours.</p>
-			<p class="text-muted">That's why KURZ has created color your brand®. We will develop thermal-transfer ink ribbons for you in your exclusive corporate color, even if it involves very special color blends.</p>
-            <p class="text-muted">Our technology helps enhance your market presence. <strong>Labels and barcodes in corporate colors make your products even more unique.</strong></p>
+            <p class="text-muted">Nhũ chuyển nhiệt theo màu chủ đạo công ty của bạn. Bất kỳ ai cũng có thể làm màu đen. Màu sắc rất bắt mắt người nhìn. Tuy nhiên, TTR cũng có sẵn các màu ánh kim.</p>
+			<p class="text-muted">Đó là lý do tại sao KURZ đã tạo ra Colour your brand®. Chúng tôi sẽ phát triển ruy băng mực truyền nhiệt cho bạn bằng màu sắc độc quyền của công ty, ngay cả khi màu chủ đạo đó có sự pha trộn màu sắc rất đặc biệt.</p>
+            <p class="text-muted">Công nghệ của chúng tôi giúp tăng cường sự hiện diện Thương hiệu của bạn trên thị trường. <strong>Nhãn và mã vạch theo màu sắc chủ đạo công ty làm cho sản phẩm của bạn thậm chí còn độc đáo hơn.</strong></p>
 		  </div>
         </div>
 		 <div class="col-md-8 portfolio-item no-padding">
@@ -192,12 +199,12 @@
        	<div class="col-md-5">
           <div class="portfolio-caption">
             <h4>TTR Unique VEROSPEC®</h4>
-            <p class="text-muted">TTR Unique VEROSPEC® is based on a special coating, which can only be <strong>verified mechanically with the appropriate reader</strong>. It combines two most important aspects - effective product protection and efficient processing in one innovative thermotransfer solution.</p>
+            <p class="text-muted">TTR Unique VEROSPEC® dựa trên một lớp phủ đặc biệt, chỉ có thể được <strong>xác minh một cách cơ học với đầu đọc thích hợp.</strong>. Nó kết hợp hai khía cạnh quan trọng nhất - bảo vệ sản phẩm hiệu quả và xử lý hiệu quả trong một giải pháp chuyển nhiệt sáng tạo.</p>
 			<ul>
-			<li>Your product identification is effectively concealed</li>
-			<li>Your identification is unique and forgery-proof</li>
-			<li>Your security feature is machine readable</li>
-			<li>Your identification is usable in court</li>
+			<li>Phần nhận dạng sản phẩm của bạn được che giấu một cách hiệu quả</li>
+			<li>Phần nhận dạng của bạn là duy nhất và là bằng chứng chứng minh cho sự làm giả bên ngoài</li>
+			<li>Tính năng bảo mật của bạn máy có thể đọc được</li>
+			<li>Phần nhận dạng của bạn có thể sử dụng được tại tòa án</li>
 			</ul>
 
 		  
@@ -207,9 +214,9 @@
 	
 	<div class="row mt-md-5">
         <div class="col-md-4 portfolio-item">
-            <h4 class="text-uppercase">Coding</h4>
-            <p class="text-muted">Coding foils are used for printing manufacturing traceability data, such as dates and batch numbers directly on products or packaging during the production or filling process.</p>
-			<p class="text-muted">Foil coding is a simpler and cleaner process compared with inkjet or other marking alternatives. It is also highly resistant to abrasion, chemical exposures which makes it ideal for regulatory and safety marking requirements.</p>
+            <h4 class="text-uppercase">Ruy Băng In hạn sử dụng</h4>
+            <p class="text-muted">Mực coding được sử dụng để in dữ liệu truy xuất nguồn gốc sản xuất, ví dụ như ngày và số lô trực tiếp trên các sản phẩm hoặc bao bì trong quá trình sản xuất hoặc đóng gói.</p>
+			<p class="text-muted">Mực in hạn sử dụng là một quy trình đơn giản và sạch hơn so với in phun hoặc các phương án in khác. Nó cũng có khả năng chống mài mòn, chống phơi nhiễm hóa chất cao, lý tưởng cho các yêu cầu in thông tin an toàn theo quy định.</p>
 		</div>
 		   <div class="col-md-4 no-padding">
 		   <br>
