--- a/vn/digital-metal.html
+++ b/vn/digital-metal.html
@@ -42,32 +42,35 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#page-top">Home</a>
+            <a class="nav-link js-scroll-trigger" href="#page-top">TRANG CHỦ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#company">Company</a>
+            <a class="nav-link js-scroll-trigger" href="#company">HỒ SƠ CÔNG TY</a>
           </li>
-           <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger" href="index.html#product">Application<span class="dropdown-toggle" data-toggle="dropdown"></a>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#product">SẢN PHẨM</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link js-scroll-trigger" href="index.html#application">ỨNG DỤNG<span class="dropdown-toggle" data-toggle="dropdown"></a>
             <div class="dropdown-menu">
-              <a class="nav-link dropdown-item" href="hotstamp.html">Hot Stamping</a>
-			  <a class="nav-link dropdown-item" href="cftransfer.html">Cold Foil Transfer</a>
-              <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
-              <a class="nav-link dropdown-item" href="textile.html">Textile</a>
-			  <a class="nav-link dropdown-item" href="cosmetic.html">Cosmetics</a>
-              <a class="nav-link dropdown-item" href="ttr-coding.html">TTR & Coding</a>
-              <a class="nav-link dropdown-item" href="card-technology.html">Card Technology</a>
-              <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
+              <a class="nav-link dropdown-item" href="hotstamp.html">CÔNG NGHỆ DẬP NÓNG</a>
+			  <a class="nav-link dropdown-item" href="cftransfer.html">CÔNG NGHỆ PHÔI LẠNH</a>
+              <a class="nav-link dropdown-item" href="plastic.html">NGÀNH NHỰA</a>
+              <a class="nav-link dropdown-item" href="textile.html">NGÀNH VẢI</a>
+			  <a class="nav-link dropdown-item" href="cosmetic.html">MỸ PHẨM</a>
+              <a class="nav-link dropdown-item" href="ttr-coding.html">RUY BĂNG IN MÃ VẠCH & IN HẠN SỬ DỤNG (TTR & CODING)</a>
+              <a class="nav-link dropdown-item" href="card-technology.html">CÔNG NGHỆ THẺ</a>
+              <a class="nav-link dropdown-item" href="brand-enhancement.html">NÂNG CẤP THƯƠNG HIỆU</a>
               <a class="nav-link dropdown-item" href="digital-metal.html">Digital Metal&reg;</a>
-              <a class="nav-link dropdown-item" href="high-security.html">High Security</a>
-              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Stamping Tools</a>
+              <a class="nav-link dropdown-item" href="high-security.html">BẢO MẬT AN NINH CAO</a>
+              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Công Cụ Dập</a>
             </div>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#solutions">Solutions</a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#contact">LIÊN HỆ</a>
           </li>
         </ul>
       </div>
@@ -87,7 +90,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase heading-underline">Digital Metal®</h2>
-          <h3 class="section-subheading text-muted">Real metal in digital printing – from lot size of 1</h3>
+          <h3 class="section-subheading text-muted">In kỹ thuật số với ánh kim thật - từ kích thước lô 1</h3>
 		  <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
 		  Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
 		  Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
@@ -113,9 +116,9 @@
 		<div class="row mt-md-5">
         <div class="col-md-4 portfolio-item">
             <h4>KURZ DIGITAL METAL®</h4>
-			<p>True metal digital decoration from copy 1</p>
-            <p class="text-muted">DIGITAL METAL® is the perfect digital concept for metallic decoration in print finishing. Our stamping foils with elegant, real metal are now available for digital printing for the first time – no set-up times, no tools, just completely new design options.</p>
-			<p class="text-muted">DIGITAL METAL® creates individual motifs or customizations using the loveliest metallization. Our DIGITAL METAL® foil provides highest gloss and sharp-edged motifs, and is easy to process. Foil transfer is 100 % digital and can be overprinted digitally or conventionally.</p>
+			<p>Trang trí kỹ thuật số ánh kim đáp ứng yêu cá nhân hóa tốt nhất.</p>
+            <p class="text-muted">DIGITAL METAL® là khái niệm kỹ thuật số hoàn hảo để trang trí ánh kim cho lớp in hoàn thiện. Nhũ dập của chúng tôi với sự thanh lịch, ánh kim thật, lần đầu tiên áp dụng để in kỹ thuật số - không cần thời gian thiết lập, không công cụ, chỉ cần các tùy chọn thiết kế hoàn toàn mới.</p>
+			<p class="text-muted">DIGITAL METAL® tạo ra các họa tiết riêng bằng cách sử dụng hiệu ứng ánh kim tuyệt nhất. Nhũ kỹ thuật số DIGITAL METAL® của chúng tôi cung cấp các họa tiết có độ bóng, độ sắc nét cao nhất, và rất dễ xử lý. Ép nhũ 100% kỹ thuật số và có thể được in đè bằng kỹ thuật số hoặc theo cách truyền thống.</p>
         </div>
 	    <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="../img/DM/dm01.jpg" alt="">
@@ -142,45 +145,43 @@
 		
        	<div class="col-md-4">
           <div class="portfolio-caption">
-            <h4>Benefits Overview:</h4>
+            <h4>Tổng quan về lợi ích:</h4>
 			<ul class="text-muted">			
-			 <li>Super fine definition</li>			
-			 <li>Compatible to most toner/ink based materials</li>
-			 <li>For mass customization and individualization</li>
-			 <li>Customized metallic finishing for individual labels/packaging or various label/packaging campaigns </li>
-			 <li>Attractive embellishment for small runs, special editions or different product series</li>
-			 <li>Variable data brilliantly highlighted</li>
-		 	 <li>Impressive high gloss effects</li>
-		 	 <li>Huge variety of colors and metallic shades feasible thanks to overprintability</li>
-			 <li>Almost no limits for creative design</li>
-			 <li>Late stage customization</li>
+			 <li>Siêu sắc nét</li>			
+			 <li>Tương thích với hầu hết mực in / dung môi trên vật liệu</li>
+			 <li>Đối đa cá nhân hóa và yêu cầu riêng</li>
+			 <li>Lớp hoàn thiện ánh kim hiệu chỉnh cho nhãn / bao bì riêng lẻ hoặc các chiến dịch nhãn / bao bì khác nhau</li>
+			 <li>Tô điểm hấp dẫn cho số lượng nhỏ, phiên bản đặc biệt hoặc các dòng sản phẩm khác nhau</li>
+			 <li>Dữ liệu biến đổi nổi bật rực rỡ</li>
+		 	 <li>Hiệu ứng bóng cao tạo ấn tượng</li>
+		 	 <li>Rất nhiều màu sắc và sắc thái ánh kim khả thi nhờ khả năng in đè</li>
+			 <li>Hầu như không có giới hạn cho thiết kế sáng tạo</li>
+			 <li>Cá nhân hóa giai đoạn sau.</li>
 			</ul>			
           </div>
-		  <h6> For more information: <a href="https://www.kurz-graphics.com/en/digital-transfer/">https://www.kurz-graphics.com/en/digital-transfer/</a></h6>
+		  <h6> Tham khảo thêm thông tin:  <a href="https://www.kurz-graphics.com/en/digital-transfer/">https://www.kurz-graphics.com/en/digital-transfer/</a></h6>
         </div>		
     </div>
 	
 	</br>
 	<hr></hr>
 	</br>
-	<h4>Application Machines</h4>
+	<h4>Máy Ứng Dụng</h4>
 	<div class="row mt-md-5">
         <div class="col-md">
 		<div class="col-md-11 portfolio-item no-padding">
 			<h6>DM-JETLINER®</h6>
-			<p>Digital inline metallization on paper and label materials </p>
-			<p class="text-muted">DM-JETLINER® lets you transfer metallization effects onto paper and label materials during digital printing.
-			The transfer process can be integrated seamlessly inline into your digital printing machine — upstream from the digital color printing.
-				Once the foil is applied with a UV-curing adhesive to the unprinted substrate, the PET carrier is removed, and the substrate can be overprinted within the printing machine.</p>
+			<p>Thiết bị in nhũ kĩ thuật số trên chuyền cho các vật liệu giấy và nhãn</p>
+			<p class="text-muted">DM-JETLINEER® cho phép bạn chuyển các hiệu ứng nhũ ánh kim in lên các vật liệu giấy và nhãn trong quá trình in kỹ thuật số.
+			Quá trình ép có thể được tích hợp liền mạch vào máy in kỹ thuật số của bạn – nâng cấp kết nối thêm từ in màu kỹ thuật số. Sau khi nhũ được sử dụng cùng với keo UV lên bề mặt chưa in, màng PET được loại bỏ và vật liệu có thể được in chồng bằng máy in.</p>
 		</div>
 		</div>
 			<div class="col-md">
 			<div class="col-md-11 portfolio-item no-padding">
 			<h6>DM-LUXLINER®</h6>
-			<p>Digital metallization on paper and cardboard stock </p>
-			<p class="text-muted">The DM-LUXLINER® allows a digital transfer of metallization onto paper and cardboard stock. The transfer process is made upstream of the digital color printing.
-			The designs to be metallized are first printed digitally; then, the DIGITAL METAL® foil is transferred by the DM-LUXLINER® and the PET carrier is removed.
-			An overprinting in 4 colors with very accurate registration is possible using suitable digital printing presses.</p>
+			<p>Thiết bị in nhũ kỹ thuật số trên giấy và thùng các tông</p>
+			<p class="text-muted">DM-LUXLINER® cho phép in nhũ kỹ thuật số lên giấy và bìa cứng. Quá trình chuyển được thực hiện nâng cấp kết nối thêm từ in màu kỹ thuật số.
+			Các thiết kế nhũ hóa được in lần đầu tiên bằng kỹ thuật số; sau đó, nhũ Digital METAL® được chuyển qua bởi DM-LUXLINER® và màng PET được loại bỏ. Có thể in đè lên 4 màu với độ canh chỉnh rất chính xác bằng cách sử dụng máy in kỹ thuật số phù hợp.</p>
 			</div>
 			</div>
 			</div>
@@ -194,15 +195,15 @@
 		<div class="col-md-4">
 		<h5>DM-JETLINER®</h5>
 		<ul class="text-muted">
-		 <li>Can be integrated into production chain</li>
-		 <li>Follows production speed of the digital printing press</li>
-		 <li>Foil, adhesive and enhancement module from one source</li>
-		 <li>Speed to market</li>
-		 <li>Late stage customization</li>
-		 <li>Custom-made hologram foils available (tickets, etc.)</li>
-		 <li>Foil is overprintable (imitate/replace offset coldfoil)</li>
-		 <li>Consignment stock of foil/pay per stamp model</li>
-		 <li>Automatic foil reordering</li>
+		 <li>Có thể tích hợp vào chuỗi sản xuất</li>
+		 <li>Theo tốc độ sản xuất của máy in ép kỹ thuật số</li>
+		 <li>Nhũ, keo và thiết bị tăng cường từ một nguồn</li>
+		 <li>Tốc độ thị trường</li>
+		 <li>Cá nhân hóa giai đoạn sau.</li>
+		 <li>Nhũ hologram theo yêu cầu (vé, v.v.)</li>
+		 <li>Nhũ có khả năng in chồng (mô phỏng / thay thế nhũ lạnh offset)</li>
+		 <li>Ký gửi nhũ in / mô hình trả cho từng lần in</li>
+		 <li>Sắp xếp lại nhũ tự động</li>
 		</ul>
 		</div>
 		</div>
@@ -210,30 +211,30 @@
 	<div class="container">
 	<div class="row mt-md-5">
     <div class="col-md-7">
-      <h6>DM-JETLINER® Specifications</h6>
+      <h6>Thông số kỹ thuật DM-JETLINEER®</h6>
       <dl class="colon">
-        <dt>Length/width/height</dt>
-        <dd>2.5 m/1.5 m/1.8m</dd>
-        <dt>Stamping speed</dt>
-        <dd>mechanical speed adjustable to 2,400 sheets/h (B2 format)</dd>
-        <dt>Heat output</dt>
-        <dd>at 30 m/min: approx. 6 kW</dd>
-        <dt>Stamping temperature</dt>
-        <dd>40 °C – 220 °C (IR heating system)</dd>
-        <dt>Electrical requirements</dt>
-        <dd>400 V, 50/60 Hz, 3 phases with N, P, E, 32 A fuse, 13 kW</dd>
-        <dt>Compressed air</dt>
-        <dd>max. 6.5 bar (oil-free), hose size Ø = 10 mm, 300 l/min</dd>
-        <dt>Foil width</dt>
+        <dt>Chiều dài / chiều rộng / chiều cao:</dt>
+        <dd>2,5 m / 1,5 m / 1,8m</dd>
+        <dt>Tốc độ dập:</dt>
+        <dd>tốc độ cơ học có thể điều chỉnh lên 2.400 tờ / giờ (định dạng B2)</dd>
+        <dt>Nhiệt lượng tỏa ra: </dt>
+        <dd>ở mức 30 m / phút: khoảng. 6 kW</dd>
+        <dt>Nhiệt độ dập:</dt>
+        <dd>40 ° C - 220 ° C (hệ thống làm nóng IR)</dd>
+        <dt>Yêu cầu về điện: </dt>
+        <dd>400 V, 50/60 Hz, 3 pha với N, P, E, 32 A, 13 kW</dd>
+        <dt>Khí nén:</dt>
+        <dd>tối đa. 6,5 bar (không dầu), kích thước ống Ø = 10 mm, 300 l / phút</dd>
+        <dt>Chiều rộng nhũ: </dt>
         <dd>550 mm</dd>
-        <dt>Foil core</dt>
+        <dt>Lõi: </dt>
         <dd>3"</dd>
-		<dt>Paper weights</dt>
+		<dt>Trọng lượng giấy:</dt>
         <dd>120 g/m² – 350 g/m²</dd>
-		<dt>Paper formats</dt>
-        <dd>min. 320 x 460 mm, max. 560 x 750 mm</dd>
-		<dt>Optional</dt>
-        <dd>palette feed</dd>
+		<dt>Định dạng giấy: </dt>
+        <dd>tối thiểu. 320 x 460 mm, tối đa. 560 x 750 mm</dd>
+		<dt>Tùy chọn: </dt>
+        <dd>bảng màu</dd>
       </dl>
     </div>
   
@@ -251,14 +252,14 @@
 		<div class="col-md-4">
 		<h5>DM-LUXLINER®</h5>
 		 <ul class="text-muted">
-		  <li>Very easy to set up</li>
-		  <li>Good results as of the first sheet</li>
-		  <li>Up to 2,400 B2 sheets/hour (depending on print and substrate)</li>
-	  	  <li>Foil and machine from one source</li>
-		  <li>Custom-made hologram foils available (tickets, etc.)</li>
-		  <li>Foil is overprintable (imitate/replace offset coldfoil)</li>
-		  <li>Consignment stock of foil/pay-per-stamp model</li>
-		  <li>Automatic foil reordering</li>
+		  <li>Rất dễ cài đặt</li>
+		  <li>Kết quả tốt như in tờ đầu tiên</li>
+		  <li>Lên đến 2.400 tờ B2 / giờ (tùy thuộc vào bản in và vật liệu)</li>
+	  	  <li>Nhũ và máy từ một nguồn</li>
+		  <li>Nhũ hologram tùy chỉnh có sẵn (vé, v.v.)</li>
+		  <li>Nhũ in đè (bắt chước / thay thế nhũ lạnh offset)</li>
+		  <li>Gửi hàng nhũ / mô hình trả cho số lượng tem </li>
+		  <li>Sắp xếp lại nhũ tự động</li>
 		 </ul>
 		</div>
 		<div class="col-md-8">
@@ -271,30 +272,30 @@
 	<div class="container">
 	<div class="row mt-md-5">
     <div class="col-md-7">
-      <h6>DM-LUXLINER® Specifications</h6>
+      <h6>Thông số kỹ thuật DM-LUXLINER®</h6>
       <dl class="colon">
-        <dt>Length/width/height</dt>
-        <dd>2.5 m/1.5 m/1.8m</dd>
-        <dt>Stamping speed</dt>
-        <dd>mechanical speed adjustable to 2,400 sheets/h (B2 format)</dd>
-        <dt>Heat output</dt>
-        <dd>at 30 m/min: approx. 6 kW</dd>
-        <dt>Stamping temperature</dt>
-        <dd>40 °C – 220 °C (IR heating system)</dd>
-        <dt>Electrical requirements</dt>
-        <dd>400 V, 50/60 Hz, 3 phases with N, P, E, 32 A fuse, 13 kW</dd>
-        <dt>Compressed air</dt>
-        <dd>max. 6.5 bar (oil-free), hose size Ø = 10 mm, 300 l/min</dd>
-        <dt>Foil width</dt>
+        <dt>Chiều dài / chiều rộng / chiều cao:</dt>
+        <dd>2,5 m / 1,5 m / 1,8m</dd>
+        <dt>Tốc độ dập:</dt>
+        <dd>tốc độ cơ học có thể điều chỉnh lên 2.400 tờ / h (định dạng B2)</dd>
+        <dt>Nhiệt lượng ra:</dt>
+        <dd>ở mức 30 m / phút: khoảng. 6 kw</dd>
+        <dt>Nhiệt độ dập:</dt>
+        <dd>40 ° C - 220 ° C (hệ thống làm nóng IR)</dd>
+        <dt>Yêu cầu về điện: </dt>
+        <dd>400 V, 50/60 Hz, 3 pha với N, P, E, 32 A, 13 kW</dd>
+        <dt>Khí nén:</dt>
+        <dd>tối đa. 6,5 bar (không dầu), kích thước ống Ø = 10 mm, 300 l / phút</dd>
+        <dt>Chiều rộng lá:</dt>
         <dd>550 mm</dd>
-        <dt>Foil core</dt>
+        <dt>Lõi nhũ: </dt>
         <dd>3"</dd>
-		<dt>Paper weights</dt>
+		<dt>Trọng lượng giấy:</dt>
         <dd>120 g/m² – 350 g/m²</dd>
-		<dt>Paper formats</dt>
-        <dd>min. 320 x 460 mm, max. 560 x 750 mm</dd>
-		<dt>Optional</dt>
-        <dd>palette feed</dd>
+		<dt>Định dạng giấy: </dt>
+        <dd>tối thiểu. 320 x 460 mm, tối đa. 560 x 750 mm</dd>
+		<dt>Tùy chọn:</dt>
+        <dd>bảng màu</dd>
       </dl>
     </div>
   
